modify content, add images

--- a/index.html
+++ b/index.html
@@ -35,15 +35,21 @@
   <body>
       <aside>
         <h2>Breaking News: Warships Stranded at Sea!</h2>
-        <img src="/images/activists.webp" alt="">
+        <em>Some AI Journalist, Feb 13, 2024</em>
+        <div class="image-container">
+          <img src="/images/activist-1.webp" alt="">
+          <img src="/images/activist-2.webp" alt="">
+          <img src="/images/navy-3.webp" alt="">
+          <img src="/images/map.webp" alt="">
+          <img src="/images/navy-2.webp" alt="">
+          <img src="/images/navy-1.webp" alt="" data-active>
+          <img src="/images/prime-ministers.webp" alt="">
+        </div>
         <p>
-          In an unprecedented sequence of events, a crisis has unfolded on the high seas, leaving warships from both Russia and the UK stranded without access to vital replenishment. The situation escalated after two individuals, reportedly incited by a provocative act, threw Heinz tomato soup at a renowned painting, triggering widespread outrage in the UK. In response, the government swiftly enacted a ban on fossil fuels, sending shockwaves through the maritime community.
+          In an unprecedented sequence of events, a crisis has unfolded on the high seas, leaving warships from both Norway and the UK stranded without access to the scheduled "replenishment at sea" (RAS), which is a method of transferring fuel from one ship to another while under way. The situation escalated after two individuals, reportedly incited by a provocative act, threw Heinz tomato soup at a renowned painting, triggering widespread outrage in the UK. In response, the government swiftly enacted a ban on fossil fuels, sending shockwaves through the maritime community.
         </p>
         <p>
-          Concurrently, Russian activists, fervently protesting against oil shipments, blockaded crucial cargo routes. The confluence of these events has resulted in a sobering impasse, leaving naval crews grappling with the unexpected consequences of geopolitical tensions and environmental activism. As diplomatic efforts intensify to resolve this maritime standoff, the world watches with bated breath, mindful of the broader implications for global stability and environmental stewardship.
-        </p>
-        <p>
-          "I told them we should invest in some massive sails," said one frustrated naval officer, "but they didn't take me seriously!"
+          Concurrently, Norwegian activists, fervently protesting against oil shipments, blockaded crucial cargo routes. The confluence of these events has resulted in a sobering impasse, leaving naval crews grappling with the unexpected consequences of geopolitical tensions and environmental activism. "I told them we should invest in some massive sails," said one frustrated naval officer, "but they didn't take me seriously!"
         </p>
         <p>
           <b>TLDR:</b> Heinz tomato soup resulted in naval conflict.
