implement image carousel

--- a/index.html
+++ b/index.html
@@ -37,13 +37,16 @@
         <h2>Breaking News: Warships Stranded at Sea!</h2>
         <em>Some AI Journalist, Feb 13, 2024</em>
         <div class="image-container">
-          <img src="/images/activist-1.webp" alt="">
-          <img src="/images/activist-2.webp" alt="">
-          <img src="/images/navy-3.webp" alt="">
-          <img src="/images/map.webp" alt="">
-          <img src="/images/navy-2.webp" alt="">
-          <img src="/images/navy-1.webp" alt="" data-active>
-          <img src="/images/prime-ministers.webp" alt="">
+          <button class="carousel-btn" data-switch="previous">
+            <svg xmlns="http://www.w3.org/2000/svg" baseProfile="tiny" viewBox="0 0 42 42" xml:space="preserve" transform="rotate(180)">
+              <path fill-rule="evenodd" d="m14 1 20 20-20 20-5-5 15-15L9 6z"/>
+            </svg>
+          </button>
+          <button class="carousel-btn" data-switch="next">
+            <svg xmlns="http://www.w3.org/2000/svg" baseProfile="tiny" viewBox="0 0 42 42" xml:space="preserve">
+              <path fill-rule="evenodd" d="m14 1 20 20-20 20-5-5 15-15L9 6z"/>
+            </svg>
+          </button>
         </div>
         <p>
           In an unprecedented sequence of events, a crisis has unfolded on the high seas, leaving warships from both Norway and the UK stranded without access to the scheduled "replenishment at sea" (RAS), which is a method of transferring fuel from one ship to another while under way. The situation escalated after two individuals, reportedly incited by a provocative act, threw Heinz tomato soup at a renowned painting, triggering widespread outrage in the UK. In response, the government swiftly enacted a ban on fossil fuels, sending shockwaves through the maritime community.
