--- a/src/pages/placement.html
+++ b/src/pages/placement.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <main>
-        <h1 id="player-name">JOHN'S FLEET</h1>
+        <h1 id="player-name"></h1>
 
         <section class="guide-container">Drag ships to game-board. Click to toggle direction</section>
   
