play waves-audio in ship-placement

--- a/src/pages/placement.html
+++ b/src/pages/placement.html
@@ -106,6 +106,9 @@
             <a id="start-game-link" href="./game.html"></a>
         </section>
     </main>
+
+    <audio id="waves-audio" src="/audio/waves-bg.mp3" loop></audio>
+
     <script type="module" src="../init/placementInit.ts"></script>
 </body>
 </html>
